Fix layout shifting when opening sections
also change some readme txt

--- a/assets/css/dropzoneMods.css
+++ b/assets/css/dropzoneMods.css
@@ -11,3 +11,7 @@
   border: unset;
   background-color: rgba(255,255,255,.4);
 }
+
+html {
+  scrollbar-gutter: stable;
+}
